# Play-on

./: .clang-format  .gitignore  Makefile  README.md  database.db  meson.build
.OLD_CSS/resources/: base.css
.OLD_CSS/resources/ui/: settings.ui
.OLD_CSS/resources/ui/settingsPages/: account.ui  general.ui  provider.ui
.OLD_CSS/resources/views/: home.css
includes/: Application.hpp  Config.hpp  Content.hpp  Database.hpp  LoadingWindow.hpp  MainWindow.hpp  Sidebar.hpp
includes/presentation/views/: BaseView.hpp  ChannelsView.hpp  HomeView.hpp  MoviesView.hpp  SeriesView.hpp  SettingsView.hpp  Sidebar.hpp
includes/presentation/views/settingViews/: AccountView.hpp  BaseSettingView.hpp  GeneralView.hpp  ProviderView.hpp
includes/processing/: PlaylistManager.hpp
includes/utils/: css.hpp  parsing.hpp  ui.hpp
includes/views/: BaseView.hpp  GridView.hpp  MoviesView.hpp  SeriesView.hpp  Sidebar.hpp
resources/: resources.gresource.xml
resources/css/: movies.css  series.css  sidebar.css
resources/sql/: schema.sql
resources/ui/: mainwindow.ui  sidebar.ui
resources/views/: settings.css  sidebar.css
resources/xml/: movies.ui  series.ui  sidebar.ui
src/: Application.cpp  Database.cpp  MainWindow.cpp  Sidebar.cpp  main.cpp
src/presentation/views/: ChannelsView.cpp  HomeView.cpp  MoviesView.cpp  SeriesView.cpp  SettingsView.cpp  Sidebar.cpp
src/presentation/views/settingView/: AccountView.cpp  GeneralView.cpp  ProviderView.cpp
src/processing/: PlaylistManager.cpp
src/views/: GridView.cpp  MoviesView.cpp  SeriesView.cpp  Sidebar.cpp
